--- a/public/login.html
+++ b/public/login.html
@@ -1,16 +1,5 @@
 <html>
-<head> 
-</head>
-
-
 <body>
-    <pre>
-     <h1>Welcome to login page</h1>
-     </pre>
-    <button><a href="./index.html">index</a></button>
-    <button><a href="./about.html">about</a></button>
-    <button><a href="./contact.html">contact</a></button>
-
-
+    <button><a href="login.html">go back to</a></button>
 </body>
 </html>
